@@ -1319,6 +1319,11 @@ example in <xref linkend="preseed-account"/>.
   <title>Finishing up the installation</title>
 
 <informalexample role="example"><screen>
+# During installations from serial console, the regular virtual consoles
+# (VT1-VT6) are normally disabled in /etc/inittab. Uncomment the next
+# line to prevent this.
+#d-i finish-install/keep-consoles boolean true
+
 # Avoid that last message about the install being complete.
 d-i finish-install/reboot_in_progress note
 
