@@ -35,11 +35,12 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Update known issues for graphical installer: entropy gathering for
     encrypted partitioning is now supported; localechooser now has nice
     columns but other components still need to be done.
+  * Document finish-install/keep-consoles boot parameter and preseeding.
 
   [ Joey Hess ]
   * Remove autopartkit from the module list.
 
- -- Frans Pop <fjp@debian.org>  Sun, 04 May 2008 12:48:07 +0200
+ -- Frans Pop <fjp@debian.org>  Wed, 07 May 2008 11:24:39 +0200
 
 installation-guide (20080211) unstable; urgency=low
 
